[공통] 마크업 페이지 업데이트

--- a/status.html
+++ b/status.html
@@ -143,9 +143,9 @@
             <tr class="">
               <td>메인</td>
               <td class="t_center">메인</td>
-              <td><p class="target"><span class='link'>/index.html</span></p></td>
+              <td><p class="target"><span class='link'>/</span></p></td>
               <td class="btn">
-                <a class="btnPc" href="./index.html" target="_blank">View</a>
+                <a class="btnPc" href="/" target="_blank">View</a>
               </td>
               <td class="t_center">O</td>
               <td class="t_center"></td>
@@ -162,12 +162,12 @@
             <tr class="">
               <td>브랜드 스토리 > 돌튼 Dalton</td>
               <td class="t_center">콘텐츠</td>
-              <td><p class="target"><span class='link'></span></p></td>
+              <td><p class="target"><span class='link'>/sub/dalton</span></p></td>
               <td class="btn">
-                <a class="btnPc" href="" target="_blank">View</a>
+                <a class="btnPc" href="/sub/dalton" target="_blank">View</a>
               </td>
               <td class="t_center">O</td>
-              <td class="t_center"></td>
+              <td class="t_center">O</td>
               <td class="t_center"></td>
               <td>
                 <ul class="comment">
@@ -177,12 +177,12 @@
             <tr class="">
               <td>브랜드 스토리 > 고객 리뷰</td>
               <td class="t_center">개발</td>
-              <td><p class="target"><span class='link'></span></p></td>
+              <td><p class="target"><span class='link'>/sub/review</span></p></td>
               <td class="btn">
-                <a class="btnPc" href="" target="_blank">View</a>
+                <a class="btnPc" href="/sub/review" target="_blank">View</a>
               </td>
               <td class="t_center">▲</td>
-              <td class="t_center"></td>
+              <td class="t_center">▲</td>
               <td class="t_center"></td>
               <td>
                 <ul class="comment">
@@ -193,9 +193,9 @@
             <tr class="">
               <td>브랜드 스토리 > 인사말</td>
               <td class="t_center">콘텐츠</td>
-              <td><p class="target"><span class='link'></span></p></td>
+              <td><p class="target"><span class='link'>/sub/greeting</span></p></td>
               <td class="btn">
-                <a class="btnPc" href="" target="_blank">View</a>
+                <a class="btnPc" href="/sub/greeting" target="_blank">View</a>
               </td>
               <td class="t_center">O</td>
               <td class="t_center"></td>
@@ -238,12 +238,12 @@
             <tr class="">
               <td>제품소개 > 색약 선글라스</td>
               <td class="t_center">개발</td>
-              <td><p class="target"><span class='link'>/sub/product.html</span></p></td>
+              <td><p class="target"><span class='link'>/sub/product</span></p></td>
               <td class="btn">
-                <a class="btnPc" href="./sub/product.html" target="_blank">View</a>
+                <a class="btnPc" href="/sub/product" target="_blank">View</a>
               </td>
               <td class="t_center">O</td>
-              <td class="t_center"></td>
+              <td class="t_center">O</td>
               <td class="t_center"></td>
               <td>
                 <ul class="comment">
@@ -283,12 +283,12 @@
             <tr class="">
               <td>기술소개 > 색각이상이란?</td>
               <td class="t_center">콘텐츠</td>
-              <td><p class="target"><span class='link'></span></p></td>
+              <td><p class="target"><span class='link'>/sub/dyschromatopsia</span></p></td>
               <td class="btn">
-                <a class="btnPc" href="" target="_blank">View</a>
+                <a class="btnPc" href="/sub/dyschromatopsia" target="_blank">View</a>
               </td>
               <td class="t_center">O</td>
-              <td class="t_center"></td>
+              <td class="t_center">O</td>
               <td class="t_center"></td>
               <td>
                 <ul class="comment">
@@ -358,9 +358,9 @@
             <tr class="">
               <td>고객지원 > 가이드</td>
               <td class="t_center">콘텐츠</td>
-              <td><p class="target"><span class='link'></span></p></td>
+              <td><p class="target"><span class='link'>/sub/guide</span></p></td>
               <td class="btn">
-                <a class="btnPc" href="" target="_blank">View</a>
+                <a class="btnPc" href="/sub/guide" target="_blank">View</a>
               </td>
               <td class="t_center">O</td>
               <td class="t_center"></td>
