--- a/status.html
+++ b/status.html
@@ -198,7 +198,7 @@
                 <a class="btnPc" href="/sub/greeting" target="_blank">View</a>
               </td>
               <td class="t_center">O</td>
-              <td class="t_center"></td>
+              <td class="t_center">O</td>
               <td class="t_center"></td>
               <td>
                 <ul class="comment">
@@ -208,9 +208,9 @@
             <tr class="">
               <td>브랜드 스토리 > 주요 연혁</td>
               <td class="t_center">콘텐츠</td>
-              <td><p class="target"><span class='link'></span></p></td>
+              <td><p class="target"><span class='link'>/sub/history</span></p></td>
               <td class="btn">
-                <a class="btnPc" href="" target="_blank">View</a>
+                <a class="btnPc" href="/sub/history" target="_blank">View</a>
               </td>
               <td class="t_center">O</td>
               <td class="t_center"></td>
