[서브] 주요연혁 페이지 작업 완료(PC)

--- a/status.html
+++ b/status.html
@@ -213,7 +213,7 @@
                 <a class="btnPc" href="/sub/history" target="_blank">View</a>
               </td>
               <td class="t_center">O</td>
-              <td class="t_center"></td>
+              <td class="t_center">O</td>
               <td class="t_center"></td>
               <td>
                 <ul class="comment">
@@ -402,10 +402,10 @@
             </tr>
             <tr class="">
               <td>고객지원 > 문의하기</td>
-              <td class="t_center">개발</td>
-              <td><p class="target"><span class='link'></span></p></td>
+              <td class="t_center">게시판(개발)</td>
+              <td><p class="target"><span class='link'>/contact/write</span></p></td>
               <td class="btn">
-                <a class="btnPc" href="" target="_blank">View</a>
+                <a class="btnPc" href="/contact/write" target="_blank">View</a>
               </td>
               <td class="t_center">O</td>
               <td class="t_center"></td>
