[공통] 마크업 페이지 업데이트 및 헤더 링크 수정

--- a/status.html
+++ b/status.html
@@ -148,7 +148,7 @@
                 <a class="btnPc" href="/" target="_blank">View</a>
               </td>
               <td class="t_center">O</td>
-              <td class="t_center"></td>
+              <td class="t_center">진행</td>
               <td class="t_center"></td>
               <td>
                 <ul class="comment">
@@ -363,7 +363,7 @@
                 <a class="btnPc" href="/sub/guide" target="_blank">View</a>
               </td>
               <td class="t_center">O</td>
-              <td class="t_center"></td>
+              <td class="t_center">O</td>
               <td class="t_center"></td>
               <td>
                 <ul class="comment">
@@ -378,7 +378,7 @@
                 <a class="btnPc" href="" target="_blank">View</a>
               </td>
               <td class="t_center">O</td>
-              <td class="t_center"></td>
+              <td class="t_center">진행</td>
               <td class="t_center"></td>
               <td>
                 <ul class="comment">
@@ -408,7 +408,7 @@
                 <a class="btnPc" href="/contact/write" target="_blank">View</a>
               </td>
               <td class="t_center">O</td>
-              <td class="t_center"></td>
+              <td class="t_center">진행</td>
               <td class="t_center"></td>
               <td>
                 <ul class="comment">
