[공통] 마크업 페이지 업데이트 및 헤더 링크 수정

--- a/status.html
+++ b/status.html
@@ -186,7 +186,7 @@
               <td class="t_center"></td>
               <td>
                 <ul class="comment">
-                  <li>네이버 리뷰 연동 이슈로 구현 가능 여부 확인</li>
+                  <li>네이버 리뷰 연동 이슈로 구현 가능 여부 확인 대기</li>
                 </ul>
               </td>
             </tr>
@@ -373,12 +373,12 @@
             <tr class="">
               <td>고객지원 > FAQ</td>
               <td class="t_center">게시판</td>
-              <td><p class="target"><span class='link'></span></p></td>
+              <td><p class="target"><span class='link'>/faq_kr</span></p></td>
               <td class="btn">
-                <a class="btnPc" href="" target="_blank">View</a>
+                <a class="btnPc" href="/faq_kr" target="_blank">View</a>
               </td>
               <td class="t_center">O</td>
-              <td class="t_center">진행</td>
+              <td class="t_center">O</td>
               <td class="t_center"></td>
               <td>
                 <ul class="comment">
@@ -388,9 +388,9 @@
             <tr class="">
               <td>고객지원 > 체험장 안내</td>
               <td class="t_center">콘텐츠</td>
-              <td><p class="target"><span class='link'></span></p></td>
+              <td><p class="target"><span class='link'>/sub/location</span></p></td>
               <td class="btn">
-                <a class="btnPc" href="" target="_blank">View</a>
+                <a class="btnPc" href="/sub/location" target="_blank">View</a>
               </td>
               <td class="t_center">O</td>
               <td class="t_center"></td>
@@ -403,15 +403,17 @@
             <tr class="">
               <td>고객지원 > 문의하기</td>
               <td class="t_center">게시판(개발)</td>
-              <td><p class="target"><span class='link'>/contact/write</span></p></td>
+              <td><p class="target"><span class='link'>/contact_kr/write</span></p></td>
               <td class="btn">
-                <a class="btnPc" href="/contact/write" target="_blank">View</a>
+                <a class="btnPc" href="/contact_kr/write" target="_blank">View</a>
               </td>
               <td class="t_center">O</td>
-              <td class="t_center">진행</td>
+              <td class="t_center">O</td>
               <td class="t_center"></td>
               <td>
                 <ul class="comment">
+                  <li>마케팅, 광고 동의 관련 기능 개발 필요</li>
+                  <li>글 작성 시 메일 발송 안되는 오류 처리 필요</li>
                 </ul>
               </td>
             </tr>
