[기타] 작업분담

--- a/status.html
+++ b/status.html
@@ -148,7 +148,7 @@
                 <a class="btnPc" href="/" target="_blank">View</a>
               </td>
               <td class="t_center">O</td>
-              <td class="t_center">진행</td>
+              <td class="t_center">O</td>
               <td class="t_center"></td>
               <td>
                 <ul class="comment">
@@ -251,6 +251,22 @@
               </td>
             </tr>
             <tr class="">
+              <td>제품소개 > 색약 선글라스 > 상세</td>
+              <td class="t_center">개발</td>
+              <td><p class="target"><span class='link'>/sub/product</span></p></td>
+              <td class="btn">
+                <a class="btnPc" href="/sub/product" target="_blank">View</a>
+              </td>
+              <td class="t_center">O</td>
+              <td class="t_center"></td>
+              <td class="t_center"></td>
+              <td>
+                <ul class="comment">
+                  <li>(염)</li>
+                </ul>
+              </td>
+            </tr>
+            <tr class="">
               <td>제품소개 > 색약 안경렌즈</td>
               <td class="t_center">개발</td>
               <td><p class="target"><span class='link'></span></p></td>
@@ -262,6 +278,23 @@
               <td class="t_center"></td>
               <td>
                 <ul class="comment">
+                  <li>(구)</li>
+                </ul>
+              </td>
+            </tr>
+            <tr class="">
+              <td>제품소개 > 색약 안경렌즈 > 상세</td>
+              <td class="t_center">개발</td>
+              <td><p class="target"><span class='link'></span></p></td>
+              <td class="btn">
+                <a class="btnPc" href="" target="_blank">View</a>
+              </td>
+              <td class="t_center">-</td>
+              <td class="t_center"></td>
+              <td class="t_center"></td>
+              <td>
+                <ul class="comment">
+                  <li>(염)</li>
                 </ul>
               </td>
             </tr>
@@ -302,11 +335,12 @@
               <td class="btn">
                 <a class="btnPc" href="" target="_blank">View</a>
               </td>
-              <td class="t_center"></td>
+              <td class="t_center">O</td>
               <td class="t_center"></td>
               <td class="t_center"></td>
               <td>
                 <ul class="comment">
+                  <li>(강)</li>
                 </ul>
               </td>
             </tr>
@@ -317,11 +351,12 @@
               <td class="btn">
                 <a class="btnPc" href="" target="_blank">View</a>
               </td>
-              <td class="t_center"></td>
+              <td class="t_center">O</td>
               <td class="t_center"></td>
               <td class="t_center"></td>
               <td>
                 <ul class="comment">
+                  <li>(구)</li>
                 </ul>
               </td>
             </tr>
@@ -332,11 +367,12 @@
               <td class="btn">
                 <a class="btnPc" href="" target="_blank">View</a>
               </td>
-              <td class="t_center"></td>
+              <td class="t_center">O</td>
               <td class="t_center"></td>
               <td class="t_center"></td>
               <td>
                 <ul class="comment">
+                  <li>(구)</li>
                 </ul>
               </td>
             </tr>
@@ -347,11 +383,12 @@
               <td class="btn">
                 <a class="btnPc" href="" target="_blank">View</a>
               </td>
-              <td class="t_center"></td>
+              <td class="t_center">-</td>
               <td class="t_center"></td>
               <td class="t_center"></td>
               <td>
                 <ul class="comment">
+                  <li>(구) 보도자료 시안 동일</li>
                 </ul>
               </td>
             </tr>
@@ -393,7 +430,7 @@
                 <a class="btnPc" href="/sub/location" target="_blank">View</a>
               </td>
               <td class="t_center">O</td>
-              <td class="t_center"></td>
+              <td class="t_center">O</td>
               <td class="t_center"></td>
               <td>
                 <ul class="comment">
