[공통] 마크업 페이지 및 헤더 링크 수정

--- a/status.html
+++ b/status.html
@@ -238,9 +238,9 @@
             <tr class="">
               <td>제품소개 > 색약 선글라스</td>
               <td class="t_center">개발</td>
-              <td><p class="target"><span class='link'>/sub/product</span></p></td>
+              <td><p class="target"><span class='link'>/sub/sunglasses</span></p></td>
               <td class="btn">
-                <a class="btnPc" href="/sub/product" target="_blank">View</a>
+                <a class="btnPc" href="/sub/sunglasses" target="_blank">View</a>
               </td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
@@ -253,9 +253,9 @@
             <tr class="">
               <td>제품소개 > 색약 선글라스 > 상세</td>
               <td class="t_center">개발</td>
-              <td><p class="target"><span class='link'>/sub/product</span></p></td>
+              <td><p class="target"><span class='link'></span></p></td>
               <td class="btn">
-                <a class="btnPc" href="/sub/product" target="_blank">View</a>
+                <a class="btnPc" href="" target="_blank">View</a>
               </td>
               <td class="t_center">O</td>
               <td class="t_center"></td>
@@ -269,9 +269,9 @@
             <tr class="">
               <td>제품소개 > 색약 안경렌즈</td>
               <td class="t_center">개발</td>
-              <td><p class="target"><span class='link'></span></p></td>
+              <td><p class="target"><span class='link'>/sub/lens</span></p></td>
               <td class="btn">
-                <a class="btnPc" href="" target="_blank">View</a>
+                <a class="btnPc" href="/sub/lens" target="_blank">View</a>
               </td>
               <td class="t_center">-</td>
               <td class="t_center"></td>
