[공통] 마크업 페이지 및 헤더 링크 수정

--- a/status.html
+++ b/status.html
@@ -274,7 +274,7 @@
                 <a class="btnPc" href="/sub/lens" target="_blank">View</a>
               </td>
               <td class="t_center">-</td>
-              <td class="t_center"></td>
+              <td class="t_center">O</td>
               <td class="t_center"></td>
               <td>
                 <ul class="comment">
@@ -331,9 +331,9 @@
             <tr class="">
               <td>기술소개 > 차별화 기술</td>
               <td class="t_center">콘텐츠</td>
-              <td><p class="target"><span class='link'></span></p></td>
+              <td><p class="target"><span class='link'>/sub/difference</span></p></td>
               <td class="btn">
-                <a class="btnPc" href="" target="_blank">View</a>
+                <a class="btnPc" href="/sub/difference" target="_blank">View</a>
               </td>
               <td class="t_center">O</td>
               <td class="t_center"></td>
@@ -347,9 +347,9 @@
             <tr class="">
               <td>새소식 > 보도자료</td>
               <td class="t_center">게시판</td>
-              <td><p class="target"><span class='link'></span></p></td>
+              <td><p class="target"><span class='link'>/news_kr</span></p></td>
               <td class="btn">
-                <a class="btnPc" href="" target="_blank">View</a>
+                <a class="btnPc" href="/news_kr" target="_blank">View</a>
               </td>
               <td class="t_center">O</td>
               <td class="t_center"></td>
