[공통] 마크업 페이지 업데이트

--- a/status.html
+++ b/status.html
@@ -371,11 +371,11 @@
                 <a class="btnPc" href="/sub/difference" target="_blank">View</a>
               </td>
               <td class="t_center">O</td>
-              <td class="t_center"></td>
+              <td class="t_center">O</td>
               <td class="t_center"></td>
               <td>
                 <ul class="comment">
-                  <li>(강)</li>
+                  <!-- <li></li> -->
                 </ul>
               </td>
             </tr>
