[공통] 마크업 페이지 업데이트 및 헤더/푸터 수정

--- a/status.html
+++ b/status.html
@@ -211,8 +211,8 @@
               <td class="btn">
                 <a class="btnPc" href="/sub/review" target="_blank">View</a>
               </td>
-              <td class="t_center">▲</td>
-              <td class="t_center">▲</td>
+              <td class="t_center">O</td>
+              <td class="t_center">O</td>
               <td class="t_center"></td>
               <td>
                 <ul class="comment">
@@ -258,12 +258,12 @@
               <td class="btn">
                 <a class="btnPc" href="/sub/map" target="_blank">View</a>
               </td>
-              <td class="t_center"></td>
-              <td class="t_center"></td>
+              <td class="t_center">-</td>
+              <td class="t_center">O</td>
               <td class="t_center"></td>
               <td>
                 <ul class="comment">
-                  <li>고객지원 > 체험장 안내 페이지의 세종본사만 표시</li>
+                  <li>체험장 안내 시안과 동일 / 세종본사만 표시</li>
                 </ul>
               </td>
             </tr>
@@ -285,16 +285,15 @@
             <tr class="">
               <td>제품소개 > 색약 선글라스 > 상세</td>
               <td class="t_center">개발</td>
-              <td><p class="target"><span class='link'></span></p></td>
+              <td><p class="target"><span class='link'>/sub/product_view</span></p></td>
               <td class="btn">
-                <a class="btnPc" href="" target="_blank">View</a>
+                <a class="btnPc" href="/sub/product_view" target="_blank">View</a>
               </td>
               <td class="t_center">O</td>
               <td class="t_center"></td>
               <td class="t_center"></td>
               <td>
                 <ul class="comment">
-                  <li>(염)</li>
                   <li>2024-03-08(금) : 상세내용 영역 관련 업체와 협의</li>
                 </ul>
               </td>
@@ -311,23 +310,21 @@
               <td class="t_center"></td>
               <td>
                 <ul class="comment">
-                  <li>(구)</li>
                 </ul>
               </td>
             </tr>
             <tr class="">
               <td>제품소개 > 색약 안경렌즈 > 상세</td>
               <td class="t_center">개발</td>
-              <td><p class="target"><span class='link'></span></p></td>
+              <td><p class="target"><span class='link'>-</span></p></td>
               <td class="btn">
-                <a class="btnPc" href="" target="_blank">View</a>
+                <a class="btnPc" href="/sub/product_view" target="_blank">View</a>
               </td>
               <td class="t_center">-</td>
-              <td class="t_center"></td>
+              <td class="t_center">-</td>
               <td class="t_center"></td>
               <td>
                 <ul class="comment">
-                  <li>(염)</li>
                   <li>2024-03-08(금) : 상세내용 영역 관련 업체와 협의</li>
                 </ul>
               </td>
@@ -387,11 +384,10 @@
                 <a class="btnPc" href="/news_kr" target="_blank">View</a>
               </td>
               <td class="t_center">O</td>
-              <td class="t_center"></td>
+              <td class="t_center">O</td>
               <td class="t_center"></td>
               <td>
                 <ul class="comment">
-                  <li>(구)</li>
                 </ul>
               </td>
             </tr>
@@ -403,11 +399,10 @@
                 <a class="btnPc" href="/notice_kr" target="_blank">View</a>
               </td>
               <td class="t_center">O</td>
-              <td class="t_center"></td>
+              <td class="t_center">O</td>
               <td class="t_center"></td>
               <td>
                 <ul class="comment">
-                  <li>(구)</li>
                 </ul>
               </td>
             </tr>
@@ -419,11 +414,11 @@
                 <a class="btnPc" href="/gallery_kr" target="_blank">View</a>
               </td>
               <td class="t_center">-</td>
-              <td class="t_center"></td>
+              <td class="t_center">O</td>
               <td class="t_center"></td>
               <td>
                 <ul class="comment">
-                  <li>(구) 보도자료 시안 동일</li>
+                  <li>보도자료 시안과 동일</li>
                 </ul>
               </td>
             </tr>
