[제품상세] 상세내용영역 완료 (PC)

--- a/status.html
+++ b/status.html
@@ -179,7 +179,7 @@
               </td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
-              <td class="t_center"></td>
+              <td class="t_center">O</td>
               <td>
                 <ul class="comment">
                   <!-- <li>
@@ -294,7 +294,8 @@
               <td class="t_center"></td>
               <td>
                 <ul class="comment">
-                  <li>2024-03-08(금) : 상세내용 영역 관련 업체와 협의</li>
+                  <li>2024-03-08(금) : 상세내용 영역 관련 업체와 협의(통이미지로 삽입)</li>
+                  <li>2024-03-11(월) : 상세내용 영역 중 선글라스 내용 제품마다 다름<br/>개발범위 불확실로 인해 상세내용 퍼블리싱 작업</li>
                 </ul>
               </td>
             </tr>
