[기타] 작업현황 업데이트

--- a/status.html
+++ b/status.html
@@ -283,23 +283,6 @@
               </td>
             </tr>
             <tr class="">
-              <td>제품소개 > 색약 선글라스 > 상세</td>
-              <td class="t_center">개발</td>
-              <td><p class="target"><span class='link'>/sub/product_view</span></p></td>
-              <td class="btn">
-                <a class="btnPc" href="/sub/product_view" target="_blank">View</a>
-              </td>
-              <td class="t_center">O</td>
-              <td class="t_center"></td>
-              <td class="t_center"></td>
-              <td>
-                <ul class="comment">
-                  <li>2024-03-08(금) : 상세내용 영역 관련 업체와 협의(통이미지로 삽입)</li>
-                  <li>2024-03-11(월) : 상세내용 영역 중 선글라스 내용 제품마다 다름<br/>개발범위 불확실로 인해 상세내용 퍼블리싱 작업</li>
-                </ul>
-              </td>
-            </tr>
-            <tr class="">
               <td>제품소개 > 색약 안경렌즈</td>
               <td class="t_center">개발</td>
               <td><p class="target"><span class='link'>/sub/lens</span></p></td>
@@ -311,22 +294,6 @@
               <td class="t_center"></td>
               <td>
                 <ul class="comment">
-                </ul>
-              </td>
-            </tr>
-            <tr class="">
-              <td>제품소개 > 색약 안경렌즈 > 상세</td>
-              <td class="t_center">개발</td>
-              <td><p class="target"><span class='link'>-</span></p></td>
-              <td class="btn">
-                <a class="btnPc" href="/sub/product_view" target="_blank">View</a>
-              </td>
-              <td class="t_center">-</td>
-              <td class="t_center">-</td>
-              <td class="t_center"></td>
-              <td>
-                <ul class="comment">
-                  <li>2024-03-08(금) : 상세내용 영역 관련 업체와 협의</li>
                 </ul>
               </td>
             </tr>
@@ -343,6 +310,23 @@
               <td>
                 <ul class="comment">
                   <li>다른 제품들과 동일한 틀 활용</li>
+                </ul>
+              </td>
+            </tr>
+            <tr class="">
+              <td>제품소개 > (공통)상세페이지</td>
+              <td class="t_center">개발</td>
+              <td><p class="target"><span class='link'>/sub/product_view</span></p></td>
+              <td class="btn">
+                <a class="btnPc" href="/sub/product_view" target="_blank">View</a>
+              </td>
+              <td class="t_center">O</td>
+              <td class="t_center">O</td>
+              <td class="t_center"></td>
+              <td>
+                <ul class="comment">
+                  <li>2024-03-08(금) : 상세내용 영역 관련 업체와 협의(통이미지로 삽입)</li>
+                  <li>2024-03-11(월) : 상세내용 영역 중 선글라스 내용 제품마다 다름<br/>개발범위 불확실로 인해 상세내용 퍼블리싱 작업</li>
                 </ul>
               </td>
             </tr>
