--- a/status.html
+++ b/status.html
@@ -198,7 +198,7 @@
               </td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
-              <td class="t_center"></td>
+              <td class="t_center">O</td>
               <td>
                 <ul class="comment">
                 </ul>
@@ -213,7 +213,7 @@
               </td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
-              <td class="t_center"></td>
+              <td class="t_center">O</td>
               <td>
                 <ul class="comment">
                   <li style="text-decoration: line-through;">네이버 리뷰 연동 이슈로 구현 가능 여부 확인 대기</li>
