--- a/status.html
+++ b/status.html
@@ -127,6 +127,14 @@
               &nbsp;&nbsp;&nbsp;&nbsp;·번역비용부담 및 언어종류 확인(송민섭 주임)
             </span>
           </p>
+          <p><b>2024-03-11(월)</b> : <br/>
+            <span style="display: block; padding-top: 5px; line-height: 1.3;">
+              ┖ 반응형 작업 착수<br/>
+              ┖ 제품소개 개발 이슈<br/>
+              &nbsp;&nbsp;&nbsp;&nbsp;·선글라스 프레임 수치 제품마다 다름<br/>
+              &nbsp;&nbsp;&nbsp;&nbsp;·개발범위 불확실로 인해 상세내용 퍼블리싱
+            </span>
+          </p>
         </div>
       </div>
     </div>
@@ -170,7 +178,7 @@
               mod : 최근 소스 전달일 기준으로 수정사항이 있음 (다음 전달일자에 초기화)
               del : 페이지 삭제됨
             -->
-            <tr class="">
+            <tr class="fin">
               <td>메인</td>
               <td class="t_center">메인</td>
               <td><p class="target"><span class='link'>/</span></p></td>
@@ -182,14 +190,10 @@
               <td class="t_center">O</td>
               <td>
                 <ul class="comment">
-                  <!-- <li>
-                    <b></b>
-                    <p></p>
-                  </li> -->
                 </ul>
               </td>
             </tr>
-            <tr class="">
+            <tr class="fin">
               <td>브랜드 스토리 > 돌튼 Dalton</td>
               <td class="t_center">콘텐츠</td>
               <td><p class="target"><span class='link'>/sub/dalton</span></p></td>
@@ -204,7 +208,7 @@
                 </ul>
               </td>
             </tr>
-            <tr class="">
+            <tr class="fin">
               <td>브랜드 스토리 > 고객 리뷰</td>
               <td class="t_center">개발</td>
               <td><p class="target"><span class='link'>/sub/review</span></p></td>
@@ -221,7 +225,7 @@
                 </ul>
               </td>
             </tr>
-            <tr class="">
+            <tr class="fin">
               <td>브랜드 스토리 > 인사말</td>
               <td class="t_center">콘텐츠</td>
               <td><p class="target"><span class='link'>/sub/greeting</span></p></td>
@@ -230,7 +234,7 @@
               </td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
-              <td class="t_center"></td>
+              <td class="t_center">O</td>
               <td>
                 <ul class="comment">
                 </ul>
