[브랜드>주요연혁] 반응형 완료

--- a/status.html
+++ b/status.html
@@ -240,7 +240,7 @@
                 </ul>
               </td>
             </tr>
-            <tr class="">
+            <tr class="fin">
               <td>브랜드 스토리 > 주요 연혁</td>
               <td class="t_center">콘텐츠</td>
               <td><p class="target"><span class='link'>/sub/history</span></p></td>
@@ -249,7 +249,7 @@
               </td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
-              <td class="t_center"></td>
+              <td class="t_center">O</td>
               <td>
                 <ul class="comment">
                 </ul>
