--- a/status.html
+++ b/status.html
@@ -13,10 +13,24 @@
   :root {
     --point-color: #F6AB00;
   }
+
+  @font-face {
+    font-family: 'SEBANG Gothic';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2104@1.0/SEBANG_Gothic_Bold.woff') format('woff');
+    font-weight: 700;
+    font-style: normal;
+  }
+  @font-face {
+    font-family: 'SEBANG Gothic';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2104@1.0/SEBANG_Gothic_Regular.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+  }
+
   /* reset */
   html,body{width:100%;height:100%;overflow:overlay;}
   html{font-size:10px;}
-  body{font-family:'Pretendard Variable';padding:0;margin:0;line-height:1;font-size:1.4rem;}
+  body{font-family:'SEBANG Gothic';padding:0;margin:0;line-height:1;font-size:1.4rem;}
   div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var, b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup, menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;vertical-align:baseline;font-style:normal;}
   dl,ul,ol,menu,li{list-style:none}
   blockquote,q{quotes:none}
