[고객지원>문의하기] 반응형 완료

--- a/status.html
+++ b/status.html
@@ -269,7 +269,7 @@
                 </ul>
               </td>
             </tr>
-            <tr class="">
+            <tr class="fin">
               <td>브랜드 스토리 > 오시는 길</td>
               <td class="t_center">콘텐츠</td>
               <td><p class="target"><span class='link'>/sub/map</span></p></td>
@@ -278,14 +278,14 @@
               </td>
               <td class="t_center">-</td>
               <td class="t_center">O</td>
-              <td class="t_center"></td>
+              <td class="t_center">O</td>
               <td>
                 <ul class="comment">
                   <li>체험장 안내 시안과 동일 / 세종본사만 표시</li>
                 </ul>
               </td>
             </tr>
-            <tr class="">
+            <tr class="fin">
               <td>제품소개 > 색약 선글라스</td>
               <td class="t_center">개발</td>
               <td><p class="target"><span class='link'>/sub/sunglasses</span></p></td>
@@ -294,13 +294,13 @@
               </td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
-              <td class="t_center"></td>
+              <td class="t_center">O</td>
               <td>
                 <ul class="comment">
                 </ul>
               </td>
             </tr>
-            <tr class="">
+            <tr class="fin">
               <td>제품소개 > 색약 안경렌즈</td>
               <td class="t_center">개발</td>
               <td><p class="target"><span class='link'>/sub/lens</span></p></td>
@@ -309,7 +309,7 @@
               </td>
               <td class="t_center">-</td>
               <td class="t_center">O</td>
-              <td class="t_center"></td>
+              <td class="t_center">O</td>
               <td>
                 <ul class="comment">
                 </ul>
@@ -322,16 +322,16 @@
               <td class="btn">
                 <a class="btnPc" href="" target="_blank">View</a>
               </td>
-              <td class="t_center"></td>
-              <td class="t_center"></td>
-              <td class="t_center"></td>
+              <td class="t_center">-</td>
+              <td class="t_center">-</td>
+              <td class="t_center">-</td>
               <td>
                 <ul class="comment">
                   <li>다른 제품들과 동일한 틀 활용</li>
                 </ul>
               </td>
             </tr>
-            <tr class="">
+            <tr class="fin">
               <td>제품소개 > (공통)상세페이지</td>
               <td class="t_center">개발</td>
               <td><p class="target"><span class='link'>/sub/product_view</span></p></td>
@@ -340,7 +340,7 @@
               </td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
-              <td class="t_center"></td>
+              <td class="t_center">O</td>
               <td>
                 <ul class="comment">
                   <li>2024-03-08(금) : 상세내용 영역 관련 업체와 협의(통이미지로 삽입)</li>
@@ -348,7 +348,7 @@
                 </ul>
               </td>
             </tr>
-            <tr class="">
+            <tr class="fin">
               <td>기술소개 > 색각이상이란?</td>
               <td class="t_center">콘텐츠</td>
               <td><p class="target"><span class='link'>/sub/dyschromatopsia</span></p></td>
@@ -357,13 +357,13 @@
               </td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
-              <td class="t_center"></td>
+              <td class="t_center">O</td>
               <td>
                 <ul class="comment">
                 </ul>
               </td>
             </tr>
-            <tr class="">
+            <tr class="fin">
               <td>기술소개 > 차별화 기술</td>
               <td class="t_center">콘텐츠</td>
               <td><p class="target"><span class='link'>/sub/difference</span></p></td>
@@ -372,7 +372,7 @@
               </td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
-              <td class="t_center"></td>
+              <td class="t_center">O</td>
               <td>
                 <ul class="comment">
                   <!-- <li></li> -->
@@ -425,7 +425,7 @@
                 </ul>
               </td>
             </tr>
-            <tr class="">
+            <tr class="fin">
               <td>고객지원 > 가이드</td>
               <td class="t_center">콘텐츠</td>
               <td><p class="target"><span class='link'>/sub/guide</span></p></td>
@@ -434,13 +434,13 @@
               </td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
-              <td class="t_center"></td>
+              <td class="t_center">O</td>
               <td>
                 <ul class="comment">
                 </ul>
               </td>
             </tr>
-            <tr class="">
+            <tr class="fin">
               <td>고객지원 > FAQ</td>
               <td class="t_center">게시판</td>
               <td><p class="target"><span class='link'>/faq_kr</span></p></td>
@@ -449,13 +449,13 @@
               </td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
-              <td class="t_center"></td>
+              <td class="t_center">O</td>
               <td>
                 <ul class="comment">
                 </ul>
               </td>
             </tr>
-            <tr class="">
+            <tr class="fin">
               <td>고객지원 > 체험장 안내</td>
               <td class="t_center">콘텐츠</td>
               <td><p class="target"><span class='link'>/sub/location</span></p></td>
@@ -464,7 +464,7 @@
               </td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
-              <td class="t_center"></td>
+              <td class="t_center">O</td>
               <td>
                 <ul class="comment">
                 </ul>
