[새소식>보도자료,갤러리] 반응형 완료

--- a/status.html
+++ b/status.html
@@ -379,7 +379,7 @@
                 </ul>
               </td>
             </tr>
-            <tr class="">
+            <tr class="fin">
               <td>새소식 > 보도자료</td>
               <td class="t_center">게시판</td>
               <td><p class="target"><span class='link'>/news_kr</span></p></td>
@@ -388,7 +388,7 @@
               </td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
-              <td class="t_center"></td>
+              <td class="t_center">O</td>
               <td>
                 <ul class="comment">
                 </ul>
@@ -409,7 +409,7 @@
                 </ul>
               </td>
             </tr>
-            <tr class="">
+            <tr class="fin">
               <td>새소식 > 갤러리</td>
               <td class="t_center">게시판</td>
               <td><p class="target"><span class='link'>/gallery_kr</span></p></td>
@@ -418,7 +418,7 @@
               </td>
               <td class="t_center">-</td>
               <td class="t_center">O</td>
-              <td class="t_center"></td>
+              <td class="t_center">O</td>
               <td>
                 <ul class="comment">
                   <li>보도자료 시안과 동일</li>
